rust/macros/tests/invalid/target/debug/deps/triple_arguments-9654199f956c26e4.d
/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/triple_arguments-9654199f956c26e4.d: triple_arguments.rs Cargo.toml

/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/libtriple_arguments-9654199f956c26e4.rmeta: triple_arguments.rs Cargo.toml

triple_arguments.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
